--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 /*
 Theme Name: uc-eportfolio
-Theme URI: http://underscores.me/
-Author: Underscores.me
-Author URI: http://underscores.me/
+Theme URI: http://ucalgary.ca/taylorinstitute/edu/
+Author: Technology Integration Group, Educational Development Unit, Taylor Institute for Teaching and Learning
+Author URI: http://ucalgary.ca/taylorinstitute/edu/
 Description: Description
 Version: 1.0.0
 License: GNU General Public License v2 or later
