--- a/style.css
+++ b/style.css
@@ -1143,7 +1143,14 @@ a.btn, a.btn:hover, a.btn:visited{
 	
 }
 
+/*--------------------------------------------------------------
+## wp-signup.php
+--------------------------------------------------------------*/
 
+.mu_register h2{
+	
+	text-align: center;
+}
 
 /*--------------------------------------------------------------
 ## Posts and pages
