--- a/style.css
+++ b/style.css
@@ -1150,6 +1150,9 @@ a.btn, a.btn:hover, a.btn:visited{
 .mu_register h2{
 	
 	text-align: center;
+	font-size: 24px;
+	margin-bottom: 15px;
+	font-weight: bold;
 }
 
 /*--------------------------------------------------------------
