--- a/frontpage.css
+++ b/frontpage.css
@@ -32,7 +32,7 @@ h1{
 
 
 #front-getting-started{
-	background-color: #fff;
+	background-color: #F3F3F3;
 }
 
 
@@ -46,7 +46,6 @@ h1{
 
 
 #front-why{
-	background-color: #424242;
 	color: #fff;
 	background-color: #F3F3F3;
 }
@@ -59,6 +58,11 @@ h1{
 #front-why .section-content{
 	color: #000;
 }
+
+#front-how{
+
+}
+
 
 #front-about h1{
 	color: #bad80a;
@@ -106,4 +110,10 @@ h1{
 
 .main-navigation li a.active-menu{
 	color: #FFFC00;
+}
+/*-------------------------------------------------------------
+## Footer
+---------------------------------------------------------------*/
+.footer-content p{
+	margin: 0;
 }
