--- a/style.css
+++ b/style.css
@@ -1086,9 +1086,9 @@ body.logged-in .main-navigation{
 }
 
 .site-content h1.entry-title{
-	font-size: 25px;
-	font-weight: 600;
-	color: #004AAB;
+	font-size: 35px;
+	font-weight: 400;
+	color: #686868;
 }
 
 .site-content .entry-content{
@@ -1154,13 +1154,30 @@ a.btn, a.btn:hover, a.btn:visited{
 ## wp-signup.php
 --------------------------------------------------------------*/
 
+.mu_register{
+	
+	margin-top: 20px !important;
+	margin-bottom: 20px !important;
+
+}
+
 .mu_register h2{
 	
 	text-align: center;
 	font-size: 24px;
 	margin-bottom: 15px;
 	font-weight: bold;
+
+
 }
+
+.mu_register input[type="submit"]{
+	
+	width: 200px !important;
+	margin: 0 auto !important;
+	
+}
+
 
 /*--------------------------------------------------------------
 ## Posts and pages
@@ -1192,6 +1209,32 @@ a.btn, a.btn:hover, a.btn:visited{
 .page-links {
 	clear: both;
 	margin: 0 0 1.5em;
+}
+
+
+.create-step{
+	margin-top: 15px;
+	margin-bottom: 25px;
+}
+
+.create-step-content{
+	margin-left: 50px;
+}
+
+.create-step-content ol{
+	margin-left: 0;
+	padding-left: 20px;
+}
+
+.create-step .create-step-title{
+	font-size: 20px;
+	font-weight: 400;
+	margin-bottom: 15px;
+}
+
+.back-to-home-link{
+	text-align: center;
+	margin-bottom: 15px;
 }
 
 /*--------------------------------------------------------------
