Gradient Color Change

--- a/frontpage.css
+++ b/frontpage.css
@@ -90,8 +90,8 @@ h1{
 }
 
 #front-steps{
-	background-color: #1E4071;
-	background: linear-gradient(to bottom, #3D6BCC 0, #1E4071 100%);	
+	background-color: #3259AB;
+	background: linear-gradient(to bottom, #3259AB 0, #1E4071 100%);	
 }
 
 #front-steps h1{
